Trying arabic without utf-8

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 <body>
   <h1>First React</h1>
   <p>Making edits to the website</p>
+  <p>ما هو الامتهان؟</p>
   <div id="firstPlace">
-    <ul>
-    </ul>
   </div>
 
   <script src="first-react.js"></script>
