setting meta data for website

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 
 <head>
   <title>My First React</title>
+  <meta name="description" content="Try for the first time">
+  <meta name="keywords" content="HTML,CSS,XML,JavaScript">
+  <meta name="author" content="al-Serembani">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
